mule-user-guide/v/3.4/foreach-processing-and-choice-routing-example.adoc
= Foreach Processing and Choice Routing Example

This Mule ESB example application demonstrates the power of content-based routing in Web service integrations.

Based on the *Loan Broker Example* included in chapter nine of _Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions_ (Hohpe, Woolf, 2004), this application minimizes a borrower’s work in acquiring the best interest rate for a loan. This example should help you to make informed decisions about using the four above-listed elements in your Mule applications. 

==== Content-Based Routing

image:content_routing.png[content_routing]Mule has the ability to intelligently route a message through different processing pathways according to its content. Using a Choice Router (or Choice Flow Control in Studio), Mule uses an expression to evaluate a message's properties, or part of its payload, then routes it to a specific pathway (i.e. series of message processors). Content-based routing, as this activity is called, dynamically applies routing criteria to a message at runtime.

==== Foreach Processing

image:iteration2.png[iteration2]An iterative processor, Foreach splits collections into elements, then processes them iteratively without losing any of the message payload. After Foreach splits a message collection and processes the individual elements, it returns a reference to the original message thus resulting in "Java in, Java out" processing.

==== Message Enriching

image:enriched4.png[enriched4]Mule uses Message Enrichers to enrich message payloads with data (i.e. add to the payload), rather than changing payload contents. Mule enriches a message’s payload so that other message processors in the application can access the original payload.

== Assumptions

This document assumes that you are familiar with Mule ESB and the link:https://docs.mulesoft.com/anypoint-studio/v/5/index[Mule Studio interface]. To increase your familiarity with Studio, consider completing one or more link:https://docs.mulesoft.com/anypoint-studio/v/5/basic-studio-tutorial[Mule Studio Tutorials].

This document describes the details of the example within the context of *Mule Studio*, Mule ESB’s graphical user interface (GUI). Where appropriate, the XML configuration follows the Studio interface screenshot in an expandable section.

== Example Use Case

This example application exposes a Web service that processes end user requests for interest rate quotes from banks. From a Web browser, an end user submits a request which contains the following:

* borrower’s name
* amount of the loan
* repayment term of the loan
* borrower’s social security number (SSN)

The application accesses other Web services to process the request, then responds to the end user. The response identifies the bank name and interest rate of the lowest quote.

The Web service uses five elements to maximize its processing efficiency:

* *Choice Flow Controls* to route messages based on content
* *Transformers* to convert message payloads’ data format
* *Message Enrichers* to add to, rather than change, message payloads
* *Foreach* to iteratively, and synchronously, process message payloads
* *Dynamic Endpoints* to send requests to different banks depending on the message payload

== Set Up and Run the Example

As with this example, you can create template applications straight out of the box in *Mule Studio* or *Mule Standalone* (Mule ESB without Studio). You can tweak the configurations of these use case-based templates to create your own customized applications in Mule.

Follow the procedure below to create, then run the Loan Broker application in Mule ESB.

. *Create, then run* the example application in Mule Studio.
. Open your Web browser.
. Type `http://localhost:11081/?name=Muley&amount=20000&term=48&ssn=1234` into the address bar of your browser, then press *enter* to elicit a response from the application (below). +
 +
image:submitted_m.png[submitted_m]

. In your browser’s address bar, replace the `amount` value with `5000`, then press *enter* to elicit a new response from the application (below). +
 +
image:submitted2_m.png[submitted2_m] +

== How it Works

This example application consists of several link:https://docs.mulesoft.com/mule-user-guide/v/3.4/mule-application-architecture[flows and subflows]. These flows integrate Web services to process end user requests for interest rate quotes from banks.

The sections below offer flow-by-flow descriptions of the application’s actions as it processes end user requests.

=== Loan-broker-sync Flow

As the main flow in the application, this flow coordinates data collection among flows to produce an end user response.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:mainLoanBrokerFlow.png[mainLoanBrokerFlow]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<flow name="loan-broker-sync" doc:name="loan-broker-sync" doc:description="The main loanbroker flow that:
 
       i) Receives a customer request
 
      ii) Performs a lookup of the customer credit profile using a component binding
 
     iii) Determines the bank that should be used to request quotes
 
     iv) Sends the request to the selected banks and aggregates responses
 
      v) Selects the lowest quote from the list of quotes
 
     vi) Returns the response to the client
 
        ">
 
        <description>
 
            The main loanbroker flow that:
 
            i) Receives a customer request
 
            ii) Performs a lookup of the customer credit profile using a component binding
 
            iii) Determines the bank that should be used to request quotes
 
            iv) Sends the request to the selected banks and aggregates responses
 
            v) Selects the lowest quote from the list of quotes
 
            vi) Returns the response to the client
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://0.0.0.0:11081" exchange-pattern="request-response" doc:name="HTTP"/>
 
 
 
 
        <http:body-to-parameter-map-transformer doc:name="Body to Parameter Map"/>
 
 
 
 
        <choice doc:name="Choice">
 
            <when expression="!(payload['name'] == null || payload['ssn'] == null || payload['amount'] == null || payload['term']==null)">
 
                    <expression-component doc:name="create customer request">
 
                        import org.mule.example.loanbroker.message.CustomerQuoteRequest;
 
                        import org.mule.example.loanbroker.model.Customer;
 
 
 
 
                        payload = new CustomerQuoteRequest(new Customer(payload['name'], Integer.parseInt(payload['ssn'])), Integer.parseInt(payload['amount']), Integer.parseInt(payload['term']));
 
                    </expression-component>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['creditProfile']]" doc:name="Enrich with creditProfile">
 
                        <flow-ref name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile"/>
 
                    </enricher>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['banks']]" doc:name="Enrich with banks">
 
                        <flow-ref name="lookupBanks" doc:name="lookupBanks"/>
 
                    </enricher>
 
 
 
 
                    <set-variable variableName="quotes" value="#[new java.util.LinkedList()]" doc:name="create empty quotes"/>
 
                    <foreach collection="#[flowVars['banks']]" doc:name="Foreach">
 
                        <enricher target="#[quotes.add($)]" doc:name="Message Enricher">
 
                            <flow-ref name="lookupLoanQuote" doc:name="lookupLoanQuote"/>
 
                        </enricher>
 
                    </foreach>
 
 
 
 
                    <flow-ref name="findLowestLoanQuote" doc:name="findLowestLoanQuote"/>
 
 
 
 
                    <object-to-string-transformer doc:name="Object to String"/>
 
            </when>
 
            <otherwise>
 
                <expression-component doc:name="set error message">payload="Error: incomplete request"</expression-component>
 
            </otherwise>
 
        </choice>
 
 
 
 
        <catch-exception-strategy doc:name="Catch Exception Strategy">
 
            <set-payload value="Error processing loan request" doc:name="Set error message"/>
 
        </catch-exception-strategy>
 
    </flow> 
----
....
------

The request-response **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/http-endpoint-reference[HTTP Inbound Endpoint] **in this flow receives an end user request. Because it has a two-way message exchange pattern, this HTTP endpoint is responsible for both receiving and returning messages.

Next, the *Body to Parameter Map Transformer* converts the data format of the message payload from http://en.wikipedia.org/wiki/HTTP_body_data[HTTP body data] to a Java http://en.wikipedia.org/wiki/Associative_array[map]. The Loan Broker application only processes Java message payloads.

Then, Mule employs a content-based router to direct the message for further processing. The **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/choice-flow-control-reference[Choice Flow Control] **routes each message to one of two processing pathways according to its payload contents (see image and code below).

* If the message payload contains a complete request (i.e. the borrower’s name and SSN, and the amount and the term of the loan), the choice flow control passes the message to the `create customer request` *Expression Component*.

* If the message payload is an incomplete request, the choice flow control passes the message to the `set error message` expression component. This component sets the payload of the message to read `Error: incomplete request`. Mule processes the message no further. Instead, it responds to the end user with the error message. +

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:choice_first_route2.png[choice_first_route2]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<choice doc:name="Choice">
 
            <when expression="!(payload['name'] == null || payload['ssn'] == null || payload['amount'] == null || payload['term']==null)">
 
                    <expression-component doc:name="create customer request">
 
                        import org.mule.example.loanbroker.message.CustomerQuoteRequest;
 
                        import org.mule.example.loanbroker.model.Customer;
 
 
 
 
                        payload = new CustomerQuoteRequest(new Customer(payload['name'], Integer.parseInt(payload['ssn'])), Integer.parseInt(payload['amount']), Integer.parseInt(payload['term']));
 
                    </expression-component>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['creditProfile']]" doc:name="Enrich with creditProfile">
 
                        <flow-ref name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile"/>
 
                    </enricher>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['banks']]" doc:name="Enrich with banks">
 
                        <flow-ref name="lookupBanks" doc:name="lookupBanks"/>
 
                    </enricher>
 
 
 
 
                    <set-variable variableName="quotes" value="#[new java.util.LinkedList()]" doc:name="create empty quotes"/>
 
                    <foreach collection="#[flowVars['banks']]" doc:name="Foreach">
 
                        <enricher target="#[quotes.add($)]" doc:name="Message Enricher">
 
                            <flow-ref name="lookupLoanQuote" doc:name="lookupLoanQuote"/>
 
                        </enricher>
 
                    </foreach>
 
 
 
 
                    <flow-ref name="findLowestLoanQuote" doc:name="findLowestLoanQuote"/>
 
 
 
 
                    <object-to-string-transformer doc:name="Object to String"/>
 
            </when>
 
            <otherwise>
 
                <expression-component doc:name="set error message">payload="Error: incomplete request"</expression-component>
 
            </otherwise>
 
        </choice> 
----
....
------

The `create customer request` component uses expressions to extract data from the message payload. It uses the data to create a new Java object with three values:

. the `Customer`, which identifies both the borrower’s name and SSN
. one `Integer`, which identifies the amount of the loan
. a second `Integer`, which identifies the loan repayment term

[source, xml, linenums]
----
<expression-component doc:name="create customer request">import org.mule.example.loanbroker.message.CustomerQuoteRequest; import org.mule.example.loanbroker.model.Customer; payload = new CustomerQuoteRequest(new Customer(payload['name'], Integer.parseInt(payload['ssn'])), Integer.parseInt(payload['amount']), Integer.parseInt(payload['term']));</expression-component>
----

With a new `CustomerQuoteRequest` object in its payload, the message encounters its first **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/message-enricher[Message Enricher]**. Throughout this flow, Mule _enriches_ messages with data rather than changing the payload contents. By enriching a message, Mule preserves the payload content so that other elements in the application can access the original data.

The `Enrich with creditProfile` enricher contains only a **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/flow-ref-component-reference[Flow Reference Component]**. This type of component invokes other flows, or subflows, in the application to acquire, then add data to the message. In this case, the `lookupCustomerCreditProfile` component demands that the LookupCustomerCreditProfile subflow access an external Web service to acquire the borrower’s credit score. Mule enriches the message with the credit score, then passes the message to the next enricher in the flow.

As with its predecessor, the `Enrich with Banks` enricher uses a flow reference component to invoke a subflow and acquire data. In this case, instead of adding a credit score, Mule uses the result of the LookupBanks subflow to add a http://en.wikipedia.org/wiki/List_(abstract_data_type)[list] of banks to the message payload.

Mule then uses a **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/variable-transformer-reference[Variable Transformer]** to create an empty list variable. Mule will fill this empty `quotes` list variable with the quotes it fetches from banks. With an empty list to fill, the message next encounters a *link:https://docs.mulesoft.com/mule-user-guide/v/3.4/foreach[Foreach]* scope. One by one, this iterative processor fetches data to populate each item on the list.

To fetch these data, the flow reference component first invokes the LookupLoanQuote subflow to acquire a quote from a bank. Then, the message enricher adds the quote to the list variable. Foreach continues to invoke, then enrich, until it has acquired a quote from each bank on the list of banks. Foreach then passes the message to the next **link:https://docs.mulesoft.com/anypoint-studio/v/5/index[message processor]** in the flow.

To illustrate foreach’s behavior with an example, imagine a message payload with the following contents:

* an empty `quotes` list variable
* a `banks` list variable naming two banks from which Mule must request a quote: MuliNational Bank, and IndustrialGrowth Bank

Foreach processes the message payload as follows:

. Foreach consults the `banks` list variable to learn that it should send its first request to MuliNational.
. Foreach invokes the LookupLoanQuote subflow.
. The LookupLoanQuote subflow calls the `getLoanQuote` Web service to obtain an interest rate quote from MultiNational.
. The LookupLoanQuote subflow provides the Web service response to the Loan-Broker-Sync flow.
. The message enricher inserts the interest rate quote from MultiNational into the `quotes` list variable.
. Foreach consults the `banks` list variable to learn that it should send its second request to IndustrialGrowth.
. Foreach invokes the LookupLoanQuote subflow.
. The LookupLoanQuote subflow calls the `getLoanQuote` Web service to obtain an interest rate quote from IndustrialGrowth.
. The LookupLoanQuote subflow provides the Web service response to the Loan-Broker-Sync flow.
. The message enricher inserts the interest rate quote from IndustrialGrown into the `quotes` list variable.
. Foreach consults the `banks` list variable to find no more items on the list. It passes the message — now with a list containing two interest rate quotes — to the next message processor. Refer to the table below for a before-and-after comparison of message contents.
+

[%header,cols="2*"]
|===
|Message Contents Before +
Iterative Processing |Message Contents After +
Iterative Processing
|`banks` list variable: +
• www.multinational.com/loans/quotes +
• www.industrialgrowth.com/loans/quotes |`banks` list variable: +
• www.multinational.com/loans/quotes +
• www.industrialgrowth.com/loans/quotes
|`quote` list variable: |`quote` list variable: +
• 6.99 +
• 6.84
|===

The penultimate message processor in this flow references yet another subflow in the application. The `findLowestLoanQuote` subflow determines which quote in the list is the lowest, then logs the result in the message payload.

Finally, the *Object to String Transformer* converts the message payload’s data format from Java to a string. The HTTP endpoint sends the response to the end user.

Notice that the Loan-broker-sync flow also contains a **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/catch-exception-strategy[Catch Exception Strategy]**. Rather than use Mule’s link:https://docs.mulesoft.com/mule-user-guide/v/3.4/error-handling[default exception strategy] this flow uses a customized exception strategy to handle errors. If an error occurs in the flow, the exception strategy’s *Set Payload Transformer* sets an error message on the payload. The application sends this error message, which reads, `Error processing loan request`, as a response to the end user.

=== LookupCustomerCreditProfile Subflow

Invoked upon demand by the Loan-broker-sync flow, this subflow acquires and logs the borrower’s credit score on the message payload.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:customerCreditProfile.png[customerCreditProfile]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sub-flow name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile" doc:description="
            Returns the customer credit profile obtained form the Credit Agency
        ">
        <description>
            Returns the customer credit profile obtained form the Credit Agency
        </description>
 
        <set-payload value="#[payload.customer]" doc:name="customer"/>
 
        <processor-chain doc:name="Processor Chain">
            <cxf:jaxws-client serviceClass="org.mule.example.loanbroker.creditagency.CreditAgencyService" operation="getCreditProfile" doc:name="getCreditProfile"/>
            <http:outbound-endpoint address="http://localhost:18080/mule/TheCreditAgencyService" doc:name="HTTP"/>
        </processor-chain>
 
        <logger level="INFO" message="Credit profile: #[payload]" doc:name="creditProfile"/>
    </sub-flow>
----
....
------

To acquire the credit score, the `customer` transformer sets the payload to `Customer`, as defined by the `create customer request` expression transformer. (Recall that the `Customer` variable contains the borrower’s name and SSN.) Mule sends a request to the `getCreditProfile` SOAP Web service. The HTTP endpoint inserts the Web service’s response into the subflow.

Mule leverages http://cxf.apache.org[Apache’s CXF framework] to build Web services. The Processor Chain that wraps the **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/soap-component-reference[SOAP Component]** and HTTP outbound endpoint is a CXF requirement. It ensures that Mule completes all processing activities prior to logging the processing result.

Last in this flow, the **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/logger-component-reference[Logger Component]** logs the payload of the Web service’s response on the message payload as the `Credit Profile`.

=== LookupBanks Subflow

The application prevents exposing all banks to all loan quote requests. A bank that caters to premiere clients, for example, would be irked to receive a request for a quote for a small loan from a borrower with poor credit. To prevent such irksome calls to banks’ Web services, the Loan Broker application employs the *LookupBanks* subflow.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:lookupBanks.png[lookupBanks]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sub-flow name="lookupBanks" doc:name="lookupBanks" doc:description="
            Returns the list of banks to contact and returns it as a flow variable 'banks'
        ">
        <description>
            Returns the list of banks to contact and returns it as a flow variable 'banks'
        </description>
 
        <choice doc:name="Choice">
            <when expression="payload.getLoanAmount() &gt;= 20000">
                <expression-component doc:name="Bank1, Bank2">payload=[new java.net.URI('http://localhost:10080/mule/TheBank1'), new java.net.URI('http://localhost:20080/mule/TheBank2')]</expression-component>
            </when>
            <when expression="payload.getLoanAmount() &gt;= 10000 || payload.getLoanAmount() &lt;= 19999">
                <expression-component doc:name="Bank3, Bank4">payload=[new java.net.URI('http://localhost:30080/mule/TheBank3'), new java.net.URI('http://localhost:40080/mule/TheBank4')]</expression-component>
            </when>
            <otherwise>
                <expression-component doc:name="Bank5">payload=[new java.net.URI('http://localhost:50080/mule/TheBank5')]</expression-component>
            </otherwise>
        </choice>
 
        <logger level="INFO" message="Banks to contact: #[payload]" doc:name="banks"/>
    </sub-flow>
----
....
------

Mule first uses a choice flow control to examine the `amount` in the payload, then routes the message according to the size of the loan.

* If the loan is more that $20,000, the flow control routes the message to the first expression component, labeled `Bank 1, Bank 2`.
* If the loan is more than $10,000, the flow control routes the message to the second expression component, labeled `Bank 3, Bank 4`.
* if otherwise (i.e. if the loan is $10,000 or less), the flow control routes the message to the third expression component, labeled `Bank 5`. 

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:choiceBanks.png[choiceBanks]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<choice doc:name="Choice">
            <when expression="payload.getLoanAmount() &gt;= 20000">
                <expression-component doc:name="Bank1, Bank2">payload=[new java.net.URI('http://localhost:10080/mule/TheBank1'), new java.net.URI('http://localhost:20080/mule/TheBank2')]</expression-component>
            </when>
            <when expression="payload.getLoanAmount() &gt;= 10000 || payload.getLoanAmount() &lt;= 19999">
                <expression-component doc:name="Bank3, Bank4">payload=[new java.net.URI('http://localhost:30080/mule/TheBank3'), new java.net.URI('http://localhost:40080/mule/TheBank4')]</expression-component>
            </when>
            <otherwise>
                <expression-component doc:name="Bank5">payload=[new java.net.URI('http://localhost:50080/mule/TheBank5')]</expression-component>
            </otherwise>
        </choice>
----
....
------

Note that the choice flow control directs the message to the first expression that evaluates to true. For example, it directs a quote request for a loan of $30,000 _only_ to the `Bank 1, Bank 2` component.

Each expression component in this subflow contains the URIs of the banks willing to provide an interest rate quote. For example, messages that pass into the `Bank 3, Bank 4` component earn, as a payload addition, the URIs for Banks 3 and 4. The `banks` Logger component records the list of appropriate banks to which to send a request.

=== LookupLoanQuote Subflow

This sends a quote request to banks' Web services.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:lookupLoanQuotes.png[lookupLoanQuotes]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sub-flow name="lookupLoanQuote" doc:name="lookupLoanQuote" doc:description="
            Returns a loanQuote from a given bank's URI
        ">
        <description>
            Returns a loanQuote from a given bank's URI
        </description>
 
        <set-variable variableName="bankUri" value="#[payload]" doc:name="bankUri"/>
 
        <expression-component doc:name="create LoanBrokerLoanRequest">
            import org.mule.example.loanbroker.message.LoanBrokerQuoteRequest;
 
            LoanBrokerQuoteRequest bqr = new LoanBrokerQuoteRequest();
            bqr.setCreditProfile(flowVars['creditProfile']);
            payload = bqr;
        </expression-component>
 
        <processor-chain doc:name="Processor Chain">
            <cxf:jaxws-client serviceClass="org.mule.example.loanbroker.bank.BankService" operation="getLoanQuote" doc:name="getLoanQuote"/>
            <http:outbound-endpoint address="http://#[flowVars['bankUri'].getHost()]:#[flowVars['bankUri'].getPort()]#[flowVars['bankUri'].getPath()]" doc:name="HTTP"/>
        </processor-chain>
        <logger message="LoanQuote from #[flowVars['bankUri']]: #[payload]" level="INFO" doc:name="quote"/>
    </sub-flow>
----
....
------

First, the variable transformer stores the Mule message payload — the bank’s URI — as a variable named `bankUri`. (Recall that this subflow receives requests one at a time from foreach in the Loan-broker-sync flow. Each request's payload a the URI of a bank.)

The `create LoanBrokerLoanRequest` component uses expressions to extract the borrower’s credit profile (logged by the `creditProfile` logger in the LookupCustomerCreditProfile flow) from the message payload. It uses the data to create a request to send to the `getLoanQuote` Web service. +
 Mule uses a SOAP component — configured as a JAXWS-client — to send the request to a bank's Web service. The HTTP outbound endpoint dynamically determines where to send the request based on the bank's URI in the message payload. It receives the response from the banks’ Web service and pushes the response payload to the `quote` logger to record.

=== FindLowestLoanRequest Subflow

This simple subflow uses an expression component to determine which item, in the list of quotes, offers the lowest interest rate. The Logger records the result.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:findLowest.png[findLowest]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<sub-flow name="findLowestLoanQuote" doc:name="findLowestLoanQuote" doc:description="
            Returns the loan quote with the lowest interest rate
        ">
        <description>
            Returns the loan quote with the lowest interest rate
        </description>
 
        <set-variable variableName="lowestQuote" value = "#[null]" doc:name="Variable"/>
        <expression-component doc:name="Expression">
            <![CDATA[
            import org.mule.example.loanbroker.model.LoanQuote;
 
            for (Object current : (List) flowVars['quotes'])
            {
                LoanQuote loanQuote = (LoanQuote) current;
                if (flowVars['lowestQuote'] == null)
                {
                    flowVars['lowestQuote'] = loanQuote;
                }
                else if (loanQuote.getInterestRate() < flowVars['lowestQuote'].getInterestRate())
                {
                    flowVars['lowestQuote'] = loanQuote;
                }
            }
 
            payload = flowVars['lowestQuote'];
            ]]>
        </expression-component>
        <logger level="INFO" message="Lowest loan quote: #[payload]" doc:name="lowestQuote"/>
    </sub-flow>
----
....
------

The expression in the component compares the `getInterestRate` of items in the list to each other to determine which one is the lowest (see image below).

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:expressionComponent.png[expressionComponent]
....
[tab,title="Studio XML Editor"]
....
[source, code, linenums]
----
import org.mule.example.loanbroker.model.LoanQuote;
 
            for (Object current : (List) flowVars['quotes'])
            {
                LoanQuote loanQuote = (LoanQuote) current;
                if (flowVars['lowestQuote'] == null)
                {
                    flowVars['lowestQuote'] = loanQuote;
                }
                else if (loanQuote.getInterestRate() < flowVars['lowestQuote'].getInterestRate())
                {
                    flowVars['lowestQuote'] = loanQuote;
                }
            }
 
            payload = flowVars['lowestQuote'];
----
....
------

=== Mock Flows

The remaining six flows in the application are “mock flows”. They act as external Web services to which the five legitimate flows and subflows call to request data.

Each flow contains:

* a request-response HTTP Endpoint and SOAP component to receive the requests
* a **link:https://docs.mulesoft.com/mule-user-guide/v/3.4/java-component-reference[Java Component]** which produces random data to mimic Web service processing.

You do not need to include these flows your customized application; they exist only to support a functional example.

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:foreach_processing_and_choice_routing.png[foreach_processing_and_choice_routing]
....
[tab,title="Studio XML Editor"]
....
[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns:spring="http://www.springframework.org/schema/beans" xmlns="http://www.mulesoft.org/schema/mule/core"
 
      xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
 
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
      xmlns:http="http://www.mulesoft.org/schema/mule/http"
 
      xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf"
 
      xsi:schemaLocation="
 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
 
http://www.mulesoft.org/schema/mule/cxf http://www.mulesoft.org/schema/mule/cxf/current/mule-cxf.xsd
 
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
 
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd " version="EE-3.4.0">
 
 
 
 
    <description>
 
        This Synchronous variant of loan broker example is modeled on the Enterprise integration Patterns book sample.
 
        See: http://www.eaipatterns.com/ComposedMessagingExample.html
 
    </description>
 
 
 
 
    <flow name="loan-broker-sync" doc:name="loan-broker-sync" doc:description="The main loanbroker flow that:
 
       i) Receives a customer request
 
      ii) Performs a lookup of the customer credit profile using a component binding
 
     iii) Determines the bank that should be used to request quotes
 
     iv) Sends the request to the selected banks and aggregates responses
 
      v) Selects the lowest quote from the list of quotes
 
     vi) Returns the response to the client
 
        ">
 
        <description>
 
            The main loanbroker flow that:
 
            i) Receives a customer request
 
            ii) Performs a lookup of the customer credit profile using a component binding
 
            iii) Determines the bank that should be used to request quotes
 
            iv) Sends the request to the selected banks and aggregates responses
 
            v) Selects the lowest quote from the list of quotes
 
            vi) Returns the response to the client
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://0.0.0.0:11081" exchange-pattern="request-response" doc:name="HTTP"/>
 
 
 
 
        <http:body-to-parameter-map-transformer doc:name="Body to Parameter Map"/>
 
 
 
 
        <choice doc:name="Choice">
 
            <when expression="!(payload['name'] == null || payload['ssn'] == null || payload['amount'] == null || payload['term']==null)">
 
                    <expression-component doc:name="create customer request">
 
                        import org.mule.example.loanbroker.message.CustomerQuoteRequest;
 
                        import org.mule.example.loanbroker.model.Customer;
 
 
 
 
                        payload = new CustomerQuoteRequest(new Customer(payload['name'], Integer.parseInt(payload['ssn'])), Integer.parseInt(payload['amount']), Integer.parseInt(payload['term']));
 
                    </expression-component>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['creditProfile']]" doc:name="Enrich with creditProfile">
 
                        <flow-ref name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile"/>
 
                    </enricher>
 
 
 
 
                    <enricher source="#[payload]" target="#[flowVars['banks']]" doc:name="Enrich with banks">
 
                        <flow-ref name="lookupBanks" doc:name="lookupBanks"/>
 
                    </enricher>
 
 
 
 
                    <set-variable variableName="quotes" value="#[new java.util.LinkedList()]" doc:name="create empty quotes"/>
 
                    <foreach collection="#[flowVars['banks']]" doc:name="Foreach">
 
                        <enricher target="#[quotes.add($)]" doc:name="Message Enricher">
 
                            <flow-ref name="lookupLoanQuote" doc:name="lookupLoanQuote"/>
 
                        </enricher>
 
                    </foreach>
 
 
 
 
                    <flow-ref name="findLowestLoanQuote" doc:name="findLowestLoanQuote"/>
 
 
 
 
                    <object-to-string-transformer doc:name="Object to String"/>
 
            </when>
 
            <otherwise>
 
                <expression-component doc:name="set error message">payload="Error: incomplete request"</expression-component>
 
            </otherwise>
 
        </choice>
 
 
 
 
        <catch-exception-strategy doc:name="Catch Exception Strategy">
 
            <set-payload value="Error processing loan request" doc:name="Set error message"/>
 
        </catch-exception-strategy>
 
    </flow>
 
 
 
 
    <sub-flow name="lookupCustomerCreditProfile" doc:name="lookupCustomerCreditProfile" doc:description="Returns the customer credit profile obtained form the Credit Agency
 
        ">
 
        <description>
 
            Returns the customer credit profile obtained form the Credit Agency
 
        </description>
 
 
 
 
        <set-payload value="#[payload.customer]" doc:name="customer"/>
 
 
 
 
        <processor-chain doc:name="Processor Chain">
 
            <cxf:jaxws-client serviceClass="org.mule.example.loanbroker.creditagency.CreditAgencyService" operation="getCreditProfile" doc:name="getCreditProfile"/>
 
            <http:outbound-endpoint address="http://localhost:18080/mule/TheCreditAgencyService" doc:name="HTTP"/>
 
        </processor-chain>
 
 
 
 
        <logger level="INFO" message="Credit profile: #[payload]" doc:name="creditProfile"/>
 
    </sub-flow>
 
 
 
 
    <sub-flow name="lookupBanks" doc:name="lookupBanks" doc:description="Returns the list of banks to contact and returns it as a flow variable 'banks'
 
        ">
 
        <description>
 
            Returns the list of banks to contact and returns it as a flow variable 'banks'
 
        </description>
 
 
 
 
        <choice doc:name="Choice">
 
            <when expression="payload.getLoanAmount() &gt;= 20000">
 
                <expression-component doc:name="Bank1, Bank2">payload=[new java.net.URI('http://localhost:10080/mule/TheBank1'), new java.net.URI('http://localhost:20080/mule/TheBank2')]</expression-component>
 
            </when>
 
            <when expression="payload.getLoanAmount() &gt;= 10000 || payload.getLoanAmount() &lt;= 19999">
 
                <expression-component doc:name="Bank3, Bank4">payload=[new java.net.URI('http://localhost:30080/mule/TheBank3'), new java.net.URI('http://localhost:40080/mule/TheBank4')]</expression-component>
 
            </when>
 
            <otherwise>
 
                <expression-component doc:name="Bank5">payload=[new java.net.URI('http://localhost:50080/mule/TheBank5')]</expression-component>
 
            </otherwise>
 
        </choice>
 
 
 
 
        <logger level="INFO" message="Banks to contact: #[payload]" doc:name="banks"/>
 
    </sub-flow>
 
 
 
 
    <sub-flow name="lookupLoanQuote" doc:name="lookupLoanQuote" doc:description="Returns a loanQuote from a given bank's URI
 
        ">
 
        <description>
 
            Returns a loanQuote from a given bank's URI
 
        </description>
 
 
 
 
        <set-variable variableName="bankUri" value="#[payload]" doc:name="bankUri"/>
 
 
 
 
        <expression-component doc:name="create LoanBrokerLoanRequest">
 
            import org.mule.example.loanbroker.message.LoanBrokerQuoteRequest;
 
 
 
 
            LoanBrokerQuoteRequest bqr = new LoanBrokerQuoteRequest();
 
            bqr.setCreditProfile(flowVars['creditProfile']);
 
            payload = bqr;
 
        </expression-component>
 
 
 
 
        <processor-chain doc:name="Processor Chain">
 
            <cxf:jaxws-client serviceClass="org.mule.example.loanbroker.bank.BankService" operation="getLoanQuote" doc:name="getLoanQuote"/>
 
            <http:outbound-endpoint address="http://#[flowVars['bankUri'].getHost()]:#[flowVars['bankUri'].getPort()]#[flowVars['bankUri'].getPath()]" doc:name="HTTP"/>
 
        </processor-chain>
 
        <logger message="LoanQuote from #[flowVars['bankUri']]: #[payload]" level="INFO" doc:name="quote"/>
 
    </sub-flow>
 
 
 
 
    <sub-flow name="findLowestLoanQuote" doc:name="findLowestLoanQuote" doc:description="Returns the loan quote with the lowest interest rate
 
        ">
 
        <description>
 
            Returns the loan quote with the lowest interest rate
 
        </description>
 
 
 
 
        <expression-component doc:name="Expression">
 
            <![CDATA[
 
            import org.mule.example.loanbroker.model.LoanQuote;
 
 
 
 
            LoanQuote lowestQuote = null;
 
 
 
 
            for (Object current : (List) flowVars['quotes'])
 
            {
 
                LoanQuote loanQuote = (LoanQuote) current;
 
                if (lowestQuote == null)
 
                {
 
                    lowestQuote = loanQuote;
 
                }
 
                else if (loanQuote.getInterestRate() < lowestQuote.getInterestRate())
 
                {
 
                    lowestQuote = loanQuote;
 
                }
 
            }
 
 
 
 
            payload = lowestQuote;
 
            ]]>
 
        </expression-component>
 
        <logger level="INFO" message="Lowest loan quote: #[payload]" doc:name="lowestQuote"/>
 
    </sub-flow>
 
 
 
 
    <!--
 
       MOCK SERVICES
 
    -->
 
 
 
 
    <flow name="TheCreditAgencyService" doc:name="TheCreditAgencyService" doc:description="The credit agency service will get the credit profile for a customer
 
        ">
 
        <description>
 
            The credit agency service will get the credit profile for a customer
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:18080/mule/TheCreditAgencyService" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.creditagency.DefaultCreditAgency" doc:name="SOAP"/>
 
        <component doc:name="creditAgency">
 
            <singleton-object class="org.mule.example.loanbroker.creditagency.DefaultCreditAgency"/>
 
        </component>
 
    </flow>
 
 
 
 
    <flow name="Bank1Flow" doc:name="Bank1Flow" doc:description="Mock flow representing Bank 1
 
        ">
 
        <description>
 
            Mock flow representing Bank 1
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:10080/mule/TheBank1" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.bank.Bank" doc:name="SOAP"/>
 
        <component doc:name="Bank 1">
 
            <singleton-object class="org.mule.example.loanbroker.bank.Bank">
 
                <property key="bankName" value="Bank #1"/>
 
            </singleton-object>
 
        </component>
 
    </flow>
 
 
 
 
    <flow name="Bank2Flow" doc:name="Bank2Flow" doc:description="Mock flow representing Bank 2
 
        ">
 
        <description>
 
            Mock flow representing Bank 2
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:20080/mule/TheBank2" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.bank.Bank" doc:name="SOAP"/>
 
 
 
 
        <component doc:name="Bank 2">
 
            <singleton-object class="org.mule.example.loanbroker.bank.Bank">
 
                <property key="bankName" value="Bank #2"/>
 
            </singleton-object>
 
        </component>
 
    </flow>
 
 
 
 
    <flow name="Bank3Flow" doc:name="Bank3Flow" doc:description="Mock flow representing Bank 3
 
        ">
 
        <description>
 
            Mock flow representing Bank 3
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:30080/mule/TheBank3" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.bank.Bank" doc:name="SOAP"/>
 
        <component doc:name="Bank 3">
 
            <singleton-object class="org.mule.example.loanbroker.bank.Bank">
 
                <property key="bankName" value="Bank #3"/>
 
            </singleton-object>
 
        </component>
 
    </flow>
 
 
 
 
    <flow name="Bank4Flow" doc:name="Bank4Flow" doc:description="Mock flow representing Bank 4
 
        ">
 
        <description>
 
            Mock flow representing Bank 4
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:40080/mule/TheBank4" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.bank.Bank" doc:name="SOAP"/>
 
        <component doc:name="Bank 4">
 
            <singleton-object class="org.mule.example.loanbroker.bank.Bank">
 
                <property key="bankName" value="Bank #4"/>
 
            </singleton-object>
 
        </component>
 
    </flow>
 
 
 
 
    <flow name="Bank5Flow" doc:name="Bank5Flow" doc:description="Mock flow representing Bank 5
 
        ">
 
        <description>
 
            Mock flow representing Bank 5
 
        </description>
 
 
 
 
        <http:inbound-endpoint address="http://localhost:50080/mule/TheBank5" exchange-pattern="request-response" doc:name="HTTP"/>
 
        <cxf:jaxws-service serviceClass="org.mule.example.loanbroker.bank.Bank" doc:name="SOAP"/>
 
        <component doc:name="Bank 5">
 
            <singleton-object class="org.mule.example.loanbroker.bank.Bank">
 
                <property key="bankName" value="Bank #5"/>
 
            </singleton-object>
 
        </component>
 
    </flow>
 
</mule> 
----
....
------

== See Also

* For more information on routing messages, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/choice-flow-control-reference[Choice Flow Control].
* For more information on enriching messages, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/scopes[Scopes].
* For more information on setting variables on messages, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/variable-transformer-reference[Variable Transformer Reference].
* For more information on iterative processing, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/foreach[Foreach].
* For more information on applying exception strategies to flows, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/error-handling[Error Handling].
* For more information on configuring a SOAP component, see link:https://docs.mulesoft.com/mule-user-guide/v/3.4/soap-component-reference[SOAP Component Reference].
